Name:                leu
Version:             0.8
Description:         TODO
License:             AllRightsReserved
Author:              Maik Brendler
Maintainer:          TODO
Build-Type:          Simple
Cabal-Version:       >=2.0
tested-with:         GHC==8.2

Executable leu
  Main-is:           leu.hs
  Other-Modules:     TermSize
  Build-Depends:     base >= 3 && < 5,
                     HaXml == 1.25.3,
                     http-conduit == 2.2.3.2,
                     bytestring == 0.10.8.2,
                     ansi-terminal == 0.6.3.1,
                     utf8-string == 1.0.1.1,
                     parseargs == 0.2.0.8,
                     MissingH == 1.4.0.1
  ghc-options:       -Wall -O2
