Name:                leu
Version:             0.8
Description:         TODO
License:             AllRightsReserved
Author:              Maik Brendler
Maintainer:          TODO
Build-Type:          Simple
Cabal-Version:       >=2.0
tested-with:         GHC==8.2

Executable leu
  Main-is:           leu.hs
  Build-Depends:     base >= 3 && < 5,
                     HaXml == 1.25.12,
                     http-conduit == 2.3.8,
                     bytestring == 0.11.3.1,
                     ansi-terminal == 0.11.4,
                     utf8-string == 1.0.2,
                     parseargs == 0.2.0.9,
                     MissingH == 1.5.0.1,
                     terminal-size == 0.3.3
  ghc-options:       -Wall -O2
  other-modules:     CmdArgs,
                     Leu.HttpRequest,
                     Leu.LineWrapper,
                     Leu.Parse,
                     Leu.Pretty,
                     Leu.Types,
                     Leu.Utils
